@@ -1,4 +1,8 @@
 Changes with Apache 1.3
+  
+  *) get_client_block() returns wrong length if policy is
+     REQUEST_CHUNKED_DECHUNK.
+     [Kenichi Hori <ken@d2.bs1.fc.nec.co.jp>] PR#815
 
   *) Support the image map format of FrontPage.  For example:
 	rect /url.hrm 10 20 30 40
